// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TPalaceMapMasterLevelsBase
message TPalaceMapMasterLevelsBase
{	
	
	
	repeated PalaceMapMasterLevelsDefine PalaceMapMasterLevels = 1; // PalaceMapMasterLevels

}

// Defined in table: PalaceMapMasterLevels
message PalaceMapMasterLevelsDefine
{	
	
	
	optional uint32 Id = 1; // id
	
	
	optional uint32 MasterId = 2; // 主人id
	
	
	optional uint32 Level = 3; // 等级
	
	
	repeated string LevelupCost = 4; // 升级消耗道具
	
	
	optional uint32 WaitTime = 5; // 等待时间(秒)
	
	
	optional string levelName = 6; // 品级名称

}

